...
        android:layout_marginBottom="29dp"
        android:gravity="center"
        android:text="REGISTER"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/emailTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/emailTextBox"
...
        android:drawableStart="@drawable/baseline_email"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter  Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/CardTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerText1" />

    <EditText
        android:id="@+id/passwordRepeatTextBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/baseline_password_24"
        android:ems="10"
        android:gravity="center"
        android:hint="Repeat password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/statusLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextBox" />

    <EditText
        android:id="@+id/passwordTextBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
...
        app:layout_constraintBottom_toTopOf="@+id/passwordTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextBox" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:text="Register"
        app:layout_constraintBottom_toTopOf="@+id/loginLink"
...
